# Nakbot_shared_control

./: .gitignore  README.md  index.html  result.txt
JetSAS/: CMakeLists.txt  package.xml
JetSAS/launch/: NakBot_teleop.launch
JetSAS/scripts/: rc_to_encoder.py  set_parameter.sh
JetSAS/src/: NakBot_transform.cpp  SimpleGPIO.cpp  aquestalk.cpp  gpio.cpp  i2c1_sensor.cpp  jetduino_spi.cpp  main.cpp  pub_lrf.cpp  ros_node.cpp  serial.cpp  timer.cpp  util.cpp
my_robo_description/: CMakeLists.txt  package.xml
my_robo_description/config/: controller.yaml  parameter.md
my_robo_description/launch/: control.launch  corridor.launch  display.launch  gazebo.launch  joy_controll.launch  my_robo_description  my_robo_description.launch  my_robo_remote.launch  robot_spawn.launch  spawn_test.launch  test_gazebo.launch  turtlebot3_house.launch  willow.launch
my_robo_description/rviz/: urdf.rviz
my_robo_description/urdf/: imu.urdf.xacro  my__nakbot(error).urdf  my_robo.urdf  my_robo.xacro  my_robo2.urdf  my_robo_backup0626.xacro  my_robo_imu.xacro
my_robo_description/worlds/: Sample_house.world  cafe.world  corridor.world  corridor_stuff.world  corridor_stuff_bak.world  (+11 more)
my_robo_simulation/: CMakeLists.txt  CMakeLists.txt.user.478cbed  README.md  package.xml
my_robo_simulation/src/auto_driving/: CMakeLists.txt  Goal.cpp  Image.cpp  Scan.cpp  System.cpp  Velocity.cpp  main.cpp
my_robo_simulation/src/auto_driving/include/auto_driving/: Goal.hpp  Image.hpp  Scan.hpp  System.hpp  Velocity.hpp
my_robo_test/: CMakeLists.txt  package.xml
nakbot_shared_control/: CMakeLists.txt  package.xml
nakbot_sim_util/: CMakeLists.txt  package.xml
(+130 files in other folders)
