<?xml version="1.0"?>
<package format="2">
  <name>nakbot_shared_control</name>
  <version>0.0.0</version>
  <description>The nakbot_shared_control metapackage</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kitajima@todo.todo">kitajima</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>my_robo_description</exec_depend>
  <exec_depend>my_robo_simulation</exec_depend>
  <exec_depend>nakbot_sim_util</exec_depend>
  <exec_depend>JetSAS</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage/>
  </export>
</package>
